@@ -4,6 +4,8 @@
   + New modules:
     - CmakeFedoraScript: Scripts to be invoked in command line.
     - ManageRpmScript: RPM Scripts to be invoked in command line.
+  + New cache variables:
+    - CMAKE_FEDORA_MODULE_DIR: cmake-fedora modules dir.		
   + ManageFile: New function: MANAGE_CMAKE_FEDORA_CONF
   + ManageFile: New function: MANAGE_FILE_CACHE
   + ManageFile: New function: MANAGE_FILE_EXPIRY
@@ -13,6 +15,8 @@
 - Removed:
   + cmake-fedora.conf.in is no longer need.
   + scripts/cmake-fedora-functions is no longer needed.
+  + Variables:
+    - PRJ_RPM_SPEC_FILE
 
 * Fri Feb 28 2014 Ding-Yi Chen <dchen at redhat.com> - 1.3.0
 - Fixed Bug 1002279 - Project configuration bugs when using cmake-fedora-newprj
@@ -377,7 +381,4 @@ just showing it.
 - Fixed changelog_update.
 
 * Mon Oct 04 2010 Ding-Yi Chen <dchen at redhat.com> - 0.1.0
-- Initial package.
-- Initial package.
-- Initial package.
 - Initial package.
